layout issue fixed

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -162,6 +162,7 @@ table#agent tbody
 .downloadcsv
 {
     float: right;
+    margin-right:5px;
    }
 .span6{
     overflow:hidden;
